--- a/App1/Strings/en-US/Resources.resw
+++ b/App1/Strings/en-US/Resources.resw
@@ -123,6 +123,9 @@
   <data name="appNameProp" xml:space="preserve">
     <value>Reading List</value>
   </data>
+  <data name="numItemsPlaceholder.Text" xml:space="preserve">
+    <value>Choose how many books should be shown on tiles</value>
+  </data>
   <data name="searchButton.Label" xml:space="preserve">
     <value>Search</value>
   </data>
