--- a/App1/Strings/pt-BR/Resources.resw
+++ b/App1/Strings/pt-BR/Resources.resw
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="appName.Text" xml:space="preserve">
-    <value>Tou Lendo 2</value>
+    <value>Tou Lendo</value>
   </data>
   <data name="appNameProp" xml:space="preserve">
     <value>Tou Lendo</value>
